**Signup and OTP Connection**
