# E-Com/org/apps/auth-service/src/routes/auth.router.ts
@@ -3,9 +3,9 @@ import { loginUser, resetUserPassword, userForgotPassword, userRegistration, ver
 
 const router: Router = express.Router();
 
-router.post("/user-registreation", userRegistration)
+router.post("/user-registration", userRegistration)
 router.post("/verify-user", verifUser)
-router.post("/lohin-user", loginUser);
+router.post("/login-user", loginUser);
 router.post("/forgot-password-user", userForgotPassword);
 router.post("/verify-forgot-password-otp-user", verifyUserForgotPassword);
 router.post("/reset-password-user",resetUserPassword);
